Add support for an explicit 'jvm' element